# surgeist-task

./: AGENTS.md  Cargo.toml  README.md
api/: public-api.txt
examples/: basic_task.rs
plans/: 2026-06-28-surgeist-root-task-integration-handoff.md  2026-06-28-surgeist-task-subsystem-consolidation.md
src/: cancel.rs  coordination.rs  event.rs  executor.rs  id.rs  lib.rs  lifecycle.rs  policy.rs  provenance.rs  queue.rs  runtime_tokio.rs  scope.rs  testing.rs
